--- a/Fagkveld/Fagkveld/Views/Home/Index.cshtml
+++ b/Fagkveld/Fagkveld/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Fagkveld</h2>
-        <p>
+        <p>@System.Configuration.ConfigurationManager.AppSettings["SCM_BUILD_ARGS"]
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
